# kassett-actions

./: .gitignore  Dockerfile  Makefile  README.md  action.yml  pyproject.toml
actions/setup-environment/: action.yml
kassett_actions/: aws.py  invocations.py
src/kassett_actions/: aws.py  github.py  invocations.py  misc.py
src/tests/: conftest.py
